perf: Migrate images to WebP format and add preloading for improved page load performance.

--- a/bakingbasics.html
+++ b/bakingbasics.html
@@ -8,6 +8,12 @@
     <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="styles/general.css">
     <link rel="stylesheet" href="styles/header.css">
+    <!-- Preload all images -->
+    <link rel="preload" as="image" href="tumbnail-images/baking-basics-hero.webp">
+    <link rel="preload" as="image" href="tumbnail-images/techniques.webp">
+    <link rel="preload" as="image" href="tumbnail-images/guides.webp">
+    <link rel="preload" as="image" href="tumbnail-images/resource.webp">
+    <link rel="preload" as="image" href="tumbnail-images/closing.webp">
     <title>BAKING-BASICS</title>
     <style>
         .baking-basics-hero {
@@ -189,7 +195,7 @@
             </div>
 
             <div class="hero-img">
-                <img src="tumbnail-images/baking-basics-hero.png" alt="hero-image" class="bb-img" data-aos="fade-up"
+                <img src="tumbnail-images/baking-basics-hero.webp" alt="hero-image" class="bb-img" data-aos="fade-up"
                     data-aos-delay="200">
             </div>
         </section>
@@ -200,7 +206,7 @@
                     <h2 class="section-title" data-aos="fade-up">Essential Baking Techniques</h2>
                     <div class="section-content">
                         <div data-aos="fade-up" data-aos-delay="100">
-                            <img src="tumbnail-images/techniques.png" alt="techniques" class="section-image">
+                            <img src="tumbnail-images/techniques.webp" alt="techniques" class="section-image">
                         </div>
                         <div class="section-text" data-aos="fade-up" data-aos-delay="200">
                             <p>Once you've mastered the basics, techniques become your best tools.
@@ -233,7 +239,7 @@
                                 we'll show you how to spot common missteps and how to fix or avoid them.</p>
                         </div>
                         <div data-aos="fade-up" data-aos-delay="200">
-                            <img src="tumbnail-images/guides.png" alt="techniques" class="section-image">
+                            <img src="tumbnail-images/guides.webp" alt="techniques" class="section-image">
                         </div>
                     </div>
                 </div>
@@ -243,7 +249,7 @@
                     <h2 class="section-title" data-aos="fade-up">Baking Resources to Keep You Inspired</h2>
                     <div class="section-content">
                         <div data-aos="fade-up" data-aos-delay="100">
-                            <img src="tumbnail-images/resource.png" alt="techniques" class="section-image">
+                            <img src="tumbnail-images/resource.webp" alt="techniques" class="section-image">
                         </div>
                         <div class="section-text" data-aos="fade-up" data-aos-delay="200">
                             <p>Beyond the basics, there's a whole world of resources to keep you inspired.
@@ -277,7 +283,7 @@
                                 baking is about connection and the simple pleasure of bringing people together.</p>
                         </div>
                         <div data-aos="fade-up" data-aos-delay="200">
-                            <img src="tumbnail-images/closing.png" alt="techniques" class="section-image">
+                            <img src="tumbnail-images/closing.webp" alt="techniques" class="section-image">
                         </div>
                     </div>
                 </div>
