--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/general.css">
+    <!-- Preload critical images -->
+    <link rel="preload" as="image" href="tumbnail-images/hero.webp">
+    <link rel="preload" as="image" href="tumbnail-images/about-us-img.webp">
     <title>BAKE TIMES</title>
 </head>
 
@@ -54,7 +57,7 @@
         <div class="container">
             <section class="hero-section">
                 <div class="hero-image">
-                    <img class="hero-img" data-aos="fade-up" src="tumbnail-images/hero.png" alt="hero image">
+                    <img class="hero-img" data-aos="fade-up" src="tumbnail-images/hero.webp" alt="hero image">
                 </div>
                 <div class="hero-content">
                     <h1 data-aos="fade-up">Freshly Baked, Just for You</h1>
@@ -83,7 +86,7 @@
                 </p>
             </div>
 
-            <img class="ab-image" data-aos="fade-up" data-aos-delay="100" src="tumbnail-images/about-us-img.png"
+            <img class="ab-image" data-aos="fade-up" data-aos-delay="100" src="tumbnail-images/about-us-img.webp"
                 alt="about-us">
         </section>
 
