feat: Introduce `styles.css` for comprehensive page styling and responsive design, and remove `data-aos` attributes from `index.html`.

--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
 
     <div class="container">
         <section class="subscription-container">
-            <div data-aos="slide-right">
+            <div>
                 <h2 style="font-size: 36px; margin: 0;">Weekly Recipes Delivered to Your Inbox</h2>
                 <p style="font-size: 20px; text-align: justify; text-justify: inter-word;">Subscribe today and get
                     delightful baking recipes,
                     handy tips, and kitchen inspiration sent directly to your inbox.
                     Discover new ways to make every bake extra special!</p>
             </div>
-            <div data-aos="slide-left">
+            <div>
                 <form id="newsletter-form" action="#" class="subscription-form" method="post">
                     <div>
                         <input class="input-ne" type="text" placeholder="Name*" required>
