--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
     <div class="container">
         <section class="featured-recipes">
             <div class="featured-recipe-title">
-                <div class="fr-title" data-aos="zoom-in-up" data-aos-delay="50">
+                <div class="fr-title" data-aos="fade-up" data-aos-delay="50">
                     <h2 class="fr-head">Handpicked Delights</h2>
                     <p class="fr-dec">Delicious creations baked fresh to perfection daily.</p>
                 </div>
-                <button class="btn js-recipe-button rec-btn" style="color: white;" data-aos="zoom-in-up"
+                <button class="btn js-recipe-button rec-btn" style="color: white;" data-aos="fade-up"
                     data-aos-delay="100">See all recipes</button>
             </div>
 
@@ -131,14 +131,14 @@
 
     <div class="container">
         <section class="subscription-container">
-            <div>
+            <div data-aos="fade-up">
                 <h2 style="font-size: 36px; margin: 0;">Weekly Recipes Delivered to Your Inbox</h2>
                 <p style="font-size: 20px; text-align: justify; text-justify: inter-word;">Subscribe today and get
                     delightful baking recipes,
                     handy tips, and kitchen inspiration sent directly to your inbox.
                     Discover new ways to make every bake extra special!</p>
             </div>
-            <div>
+            <div data-aos="fade-up" data-aos-delay="100">
                 <form id="newsletter-form" action="#" class="subscription-form" method="post">
                     <div>
                         <input class="input-ne" type="text" placeholder="Name*" required>
