--- a/index.html
+++ b/index.html
@@ -57,17 +57,17 @@
         <div class="container">
             <section class="hero-section">
                 <div class="hero-image">
-                    <img class="hero-img" data-aos="fade-up" src="tumbnail-images/hero.webp" alt="hero image">
+                    <img class="hero-img" src="tumbnail-images/hero.webp" alt="hero image">
                 </div>
                 <div class="hero-content">
-                    <h1 data-aos="fade-up">Freshly Baked, Just for You</h1>
-                    <p data-aos="fade-up" data-aos-delay="100">Hello! We bake cakes and desserts with love, using fresh
+                    <h1>Freshly Baked, Just for You</h1>
+                    <p>Hello! We bake cakes and desserts with love, using fresh
                         ingredients and timeless recipes.
                         Each creation is made to bring joy, flavor, and sweetness to your day.</p>
                     <div class="hero-buttons">
-                        <button class="btn js-recipe-button" data-aos="fade-up" data-aos-delay="150">Explore
+                        <button class="btn js-recipe-button">Explore
                             Recipes</button>
-                        <button class="btn cu" data-aos="fade-up" data-aos-delay="200">Contact Us</button>
+                        <button class="btn cu">Contact Us</button>
                     </div>
                 </div>
             </section>
@@ -75,7 +75,7 @@
     </div>
     <div class="container">
         <section class="about-us" id="about">
-            <div class="about-text" data-aos="fade-up" data-aos-delay="0">
+            <div class="about-text">
                 <h2>About Us</h2>
                 <p>
                     At our bakery, we believe every cake tells a story.
@@ -86,25 +86,24 @@
                 </p>
             </div>
 
-            <img class="ab-image" data-aos="fade-up" data-aos-delay="100" src="tumbnail-images/about-us-img.webp"
-                alt="about-us">
+            <img class="ab-image" src="tumbnail-images/about-us-img.webp" alt="about-us">
         </section>
 
 
         <div class="about-cards">
-            <div class="ab-cards" data-aos="fade-up" data-aos-delay="0">
+            <div class="ab-cards">
                 <h4>Trusted by Customers</h4>
                 <p>We deliver quality and consistency,
                     earning the trust of customers for every special moment.</p>
             </div>
 
-            <div class="ab-cards" data-aos="fade-up" data-aos-delay="100">
+            <div class="ab-cards">
                 <h4>Creative Designs</h4>
                 <p>We craft cakes with unique styles and details,
                     turning every bake into a centerpiece worth celebrating.</p>
             </div>
 
-            <div class="ab-cards" data-aos="fade-up" data-aos-delay="200">
+            <div class="ab-cards">
                 <h4>Made with Passion</h4>
                 <p>Every recipe is baked with dedication and care,
                     bringing you desserts that truly come from the heart.</p>
@@ -115,12 +114,11 @@
     <div class="container">
         <section class="featured-recipes">
             <div class="featured-recipe-title">
-                <div class="fr-title" data-aos="fade-up" data-aos-delay="50">
+                <div class="fr-title">
                     <h2 class="fr-head">Handpicked Delights</h2>
                     <p class="fr-dec">Delicious creations baked fresh to perfection daily.</p>
                 </div>
-                <button class="btn js-recipe-button rec-btn" style="color: white;" data-aos="fade-up"
-                    data-aos-delay="100">See all recipes</button>
+                <button class="btn js-recipe-button rec-btn" style="color: white;">See all recipes</button>
             </div>
 
             <div class="featured-recipes-cards">
@@ -131,14 +129,14 @@
 
     <div class="container">
         <section class="subscription-container">
-            <div data-aos="fade-up">
+            <div>
                 <h2 style="font-size: 36px; margin: 0;">Weekly Recipes Delivered to Your Inbox</h2>
                 <p style="font-size: 20px; text-align: justify; text-justify: inter-word;">Subscribe today and get
                     delightful baking recipes,
                     handy tips, and kitchen inspiration sent directly to your inbox.
                     Discover new ways to make every bake extra special!</p>
             </div>
-            <div data-aos="fade-up" data-aos-delay="100">
+            <div>
                 <form id="newsletter-form" action="#" class="subscription-form" method="post">
                     <div>
                         <input class="input-ne" type="text" placeholder="Name*" required>
