feat: Introduce dynamic featured recipes and a contact popup, and refine content and animations on several HTML pages.

--- a/holidays.html
+++ b/holidays.html
@@ -273,15 +273,14 @@
         </section>
 
         <section class="subscription-container">
-            <div data-aos="slide-right">
-                <h2 style="font-size: 36px; margin: 0;">Celebrate the Holidays with Sweet Treats in Your Inbox</h2>
-                <p style="font-size: 20px; text-align: justify; text-justify: inter-word;">Join our holiday mailing list
-                    and
-                    receive delicious recipes,
-                    baking guides, and festive kitchen ideas right in your inbox.
-                    Make every holiday bake warm, joyful, and unforgettable!</p>
+            <div data-aos="zoom-in">
+                <h2 style="font-size: 36px; margin: 0;">Weekly Recipes Delivered to Your Inbox</h2>
+                <p style="font-size: 20px; text-align: justify; text-justify: inter-word;">Subscribe today and get
+                    delightful baking recipes,
+                    handy tips, and kitchen inspiration sent directly to your inbox.
+                    Discover new ways to make every bake extra special!</p>
             </div>
-            <div data-aos="slide-left">
+            <div data-aos="zoom-in">
                 <form id="newsletter-form" action="#" class="subscription-form" method="post">
                     <div>
                         <input class="input-ne" type="text" placeholder="Name*" required>
