--- a/recipe-template.html
+++ b/recipe-template.html
@@ -296,12 +296,12 @@
 
 
   <section class="qa-form">
-    <div class="qa-form-title" data-aos="slide-right">
-      <h2>Got a Baking Question? We're Here to Help</h2>
-      <p>Whether you're wondering how to adjust the texture, replace an ingredient, or perfect the technique, drop your
-        question below. Your inquiry may be the tip another baker needs to make their next recipe a success.</p>
+    <div class="qa-form-title" data-aos="zoom-in">
+      <h2>Have Questions?</h2>
+      <p>We'd love to hear from you! Ask us anything about this recipe or share your baking tips.</p>
     </div>
-    <div class="form-content" data-aos="slide-left">
+
+    <div class="form-content" data-aos="zoom-in">
       <form id="qa-form" action="#" method="post">
         <input type="text" id="qa-name" placeholder="Enter Your Name.." required>
         <input type="email" id="qa-email" placeholder="Enter Your Email.." required>
