--- a/reviews.html
+++ b/reviews.html
@@ -417,13 +417,11 @@
 
 
         <section class="review-form">
-            <div class="review-form-title" data-aos="slide-right">
-                <h2>Share Your Baking Story</h2>
-                <p>Leave a review and tell us about your baking experience.
-                    Whether it was a cake that brightened your day or bread that brought comfort to your table,
-                    your words help other bakers find recipes they'll love.</p>
+            <div class="review-form-title" data-aos="zoom-in">
+                <h2>Share Your Thoughts</h2>
+                <p>We'd love to hear about your experience! Your feedback helps us improve and inspires others.</p>
             </div>
-            <div class="form-content" data-aos="slide-left">
+            <div class="form-content" data-aos="zoom-in">
                 <form class="js-feedback-form" action="#" method="post" data-confirm-duration="4000">
                     <input type="text" placeholder="Enter Your Name.." required>
                     <input type="email" placeholder="Enter Your Email.." required>
