feat: Dynamically update the copyright year in the footer of all HTML pages using a new JavaScript file.

--- a/holidays.html
+++ b/holidays.html
@@ -296,7 +296,7 @@
     </main>
 
     <footer>
-        <p style="margin: 0; font-size: 16px;">© 2025 BAKE TIMES. All rights reserved.</p>
+        <p style="margin: 0; font-size: 16px;">© <span id="current-year"></span> BAKE TIMES. All rights reserved.</p>
         <div>
             <a href="https://facebook.com" class="fa fa-facebook footer-link"></a>
             <a href="https://twitter.com" class="fa fa-twitter footer-link"></a>
