feat: Integrate footer-year script across all main HTML pages.

--- a/recipe-template.html
+++ b/recipe-template.html
@@ -338,6 +338,7 @@
   <script src="scripts/recipe-template-api.js"></script>
   <script src="scripts/qa-api.js"></script>
   <script src="scripts/form-feedback.js"></script>
+  <script src="scripts/footer-year.js"></script>
 </body>
 
 </html>
