--- a/recipes.html
+++ b/recipes.html
@@ -216,6 +216,7 @@
     <script src="scripts/api-integration.js"></script>
     <!-- Updated recipes page script that uses API data -->
     <script src="scripts/recipe-api.js"></script>
+    <script src="scripts/footer-year.js"></script>
 
 </body>
 
