--- a/bakingbasics.html
+++ b/bakingbasics.html
@@ -311,6 +311,7 @@
     </script>
     <script src="scripts/config.js"></script>
     <script src="scripts/header.js"></script>
+    <script src="scripts/footer-year.js"></script>
 </body>
 
 </html>
