--- a/holidays.html
+++ b/holidays.html
@@ -321,6 +321,7 @@
     <script src="scripts/holidays-api.js"></script>
     <script src="scripts/subscription-api.js"></script>
     <script src="scripts/form-feedback.js"></script>
+    <script src="scripts/footer-year.js"></script>
 </body>
 
 </html>
