--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
     <script src="scripts/home-Page-api.js"></script>
     <script src="scripts/subscription-api.js"></script>
     <script src="scripts/form-feedback.js"></script>
+    <script src="scripts/footer-year.js"></script>
 </body>
 
 </html>
