--- a/reviews.html
+++ b/reviews.html
@@ -479,6 +479,7 @@
     <script src="scripts/header.js"></script>
     <!-- Reviews API Integration -->
     <script src="scripts/reviews-api.js"></script>
+    <script src="scripts/footer-year.js"></script>
 </body>
 
 </html>
